--- a/order.html
+++ b/order.html
@@ -42,11 +42,11 @@
     <header>
         <h1>KwikDeliveries</h1>
         <nav>
-            <a href="..\KwikDeliveries\index.html">Home</a>
-            <a href="..\KwikDeliveries\about.html">About</a>
-            <a href="..\KwikDeliveries\services.html">Services</a>
-            <a href="..\KwikDeliveries\contact.html">Contact</a>
-            <a href="..\KwikDeliveries\add.html">&#43;</a>
+            <a href="..\Kwikdeliveries\index.html">Home</a>
+            <a href="">About</a>
+            <a href="">Services</a>
+            <a href="">Contact</a>
+            <a href="..\Kwikeliveries\add.html">&#43;</a>
         </nav>
       </header>
     <h2>Make an order</h2>
