--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
       <header>
         <h1>KwikDeliveries</h1>
         <nav>
-            <a href="..\KwikDeliveries\index.html">Home</a>
-            <a href="..\KwikDeliveries\about.html">About</a>
-            <a href="..\KwikDeliveries\services.html">Services</a>
-            <a href="..\KwikDeliveries\contact.html">Contact</a>
-            <a href="..\KwikDeliveries\add.html">&#43;</a>
+            <a href="..\Kwikdeliveries\index.html">Home</a>
+            <a href="">About</a>
+            <a href="">Services</a>
+            <a href="">Contact</a>
+            <a href="..\Kwikeliveries\add.html">&#43;</a>
         </nav>
       </header>
     
@@ -56,7 +56,7 @@
     </div>
 
     <div class="cta">
-        <a href="..\KwikDeliveries\order.html"><button>Make an order</button></a>
+        <a href="..\Kwikdeliveries\order.html"><button>Make an order</button></a>
     </div>
 
     <div class="about">
