--- a/add.html
+++ b/add.html
@@ -47,7 +47,7 @@
             <a href="">About</a>
             <a href="">Services</a>
             <a href="">Contact</a>
-            <a href="..\Kwikeliveries\add.html">&#43;</a>
+            <a href="..\Kwikdeliveries\add.html">&#43;</a>
         </nav>
       </header>
 
